# UNIGAP-ProjectGlamira

./: .gitignore  README.md  pyproject.toml
config/: get_mongo_connection.py
etl/extract/: product_crawler.py
etl/load/: export_to_bigquery.py  export_to_gcs.py  trigger_bigquery_load.py
etl/transform/: ip_processing.py
src/: checkpoint_manager.py  get_data_from_env.py
tests/: raw_data_profiling.sql
